incident-service-virtualservice.yml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: incident-service-virtualservice
spec:
  hosts:
  - incident-service.user2.apps.cluster-5a80.5a80.example.opentlc.com
  gateways:
  - erd-wildcard-gateway.admin2-istio-system.svc.cluster.local
  http:
  - match:
    - uri:
        prefix: /incidents
    route:
    - destination:
        port:
          number: 8080
        host: user2-incident-service.user2-er-demo.svc.cluster.local
