responder-service-virtualservice.yml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: responder-service-virtualservice
spec:
  hosts:
  - "responder-service.user2.apps.cluster-5a80.5a80.example.opentlc.com"
  gateways:
  - erd-wildcard-gateway.admin2-istio-system.svc.cluster.local
  http:
  - match:
    - uri:
        prefix: /responders
    - uri:
        prefix: /responder
    - uri:
        exact: /stats
    route:
    - destination:
        port:
          number: 8080
        host: user2-responder-service.user2-er-demo.svc.cluster.local
